--- a/premedia/edetailers/css/style.css
+++ b/premedia/edetailers/css/style.css
@@ -1,32 +1,178 @@
+@import url("https://fonts.googleapis.com/css?family=Lato|Varela&display=swap");
 html, body {
   margin: 0;
   padding: 0;
   width: 100%;
-  background-color: #FFF; }
+  background-color: #FFF;
+  font-family: 'Lato', sans-serif; }
 
 .column {
   padding: 1em;
-  box-sizing: border-box;
-  border: 1px dashed #000; }
+  box-sizing: border-box; }
   .column img {
     max-width: 700px;
     width: 100%; }
 
-h2, .btn-container {
-  text-align: center; }
+h1, h2, h3, h4, h5 {
+  fontfont-family: 'Varela', sans-serif; }
+
+p {
+  margin-block-start: 1.2em;
+  margin-block-end: 1.2em;
+  line-height: 1.5em; }
 
 nav {
+  position: fixed;
+  height: 3em;
+  display: block;
+  width: 100%;
+  background: #333;
+  z-index: 9;
   text-align: center;
-  border: 1px solid blue; }
+  color: #f2f2f2; }
+
+#home {
+  background-color: #3A3A9D; }
+  #home h1, #home p {
+    color: #fff; }
+  #home .btn {
+    background-color: #3A3A9D;
+    padding: 1em;
+    font-size: 1.2em;
+    color: #FFF;
+    border: none; }
+    #home .btn.accent-blue {
+      color: #000;
+      background-color: #83D0F4; }
+
+#eDetailers .info-panel {
+  margin-right: 1em;
+  background-color: #F4F4F4;
+  padding: 1em 2em 2em; }
+  #eDetailers .info-panel h1 {
+    color: #3A3A9D; }
+  #eDetailers .info-panel hr {
+    border: none;
+    height: .25em;
+    background-color: #83D0F4; }
+#eDetailers .service-panel {
+  background-color: #3A3A9D;
+  margin-top: 1em;
+  color: #FFF; }
+  #eDetailers .service-panel .column hr {
+    background-color: #83D0F4;
+    border: none;
+    height: .125em;
+    width: 3em;
+    margin: 1em auto .25em; }
+
+#services {
+  background-image: linear-gradient(0, rgba(58, 58, 157, 0.57), rgba(58, 58, 157, 0.57)), url("../img/service-bg.jpg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 100%; }
+  #services .column {
+    margin-left: .5em;
+    margin-right: .5em; }
+    #services .column h3 {
+      margin-top: 0;
+      font-size: 1.5em; }
+  #services .development {
+    background-color: #DDDEDE; }
+    #services .development h3 {
+      color: #3A3A9D; }
+  #services .localisation {
+    background-color: #3A3A9D;
+    color: #FFF; }
+    #services .localisation h3 {
+      color: #83D0F4; }
+  #services .translation {
+    background-color: #ECEFF0; }
+    #services .translation h3 {
+      color: #3A3A9D; }
+  #services .transcreation {
+    background-color: #83D0F4; }
+    #services .transcreation h3 {
+      color: #fff; }
+
+#how-we-work .title {
+  text-align: center; }
+  #how-we-work .title h2 {
+    color: #3A3A9D; }
+  #how-we-work .title hr {
+    background-color: #83D0F4;
+    border: none;
+    height: .25em;
+    width: 12em;
+    margin: 1em auto; }
+#how-we-work .work-selector {
+  padding: 0;
+  color: #919191; }
+  #how-we-work .work-selector .column:nth-of-type(1) {
+    text-align: right; }
+  #how-we-work .work-selector .active {
+    color: #575757; }
+#how-we-work .work-container .column h3 {
+  color: #3A3A9D; }
+#how-we-work .btn-container {
+  margin-top: 1em;
+  text-align: center; }
+  #how-we-work .btn-container button {
+    font-size: 1.2em;
+    outline: none;
+    background-color: #3A3A9D;
+    color: #fff;
+    padding: 1em 5em; }
+
+#about .column {
+  margin: 0 1.5em;
+  padding: 0; }
+  #about .column .info-panel {
+    padding: 1em;
+    background-color: #3A3A9D;
+    color: #fff; }
+    #about .column .info-panel h2 {
+      color: #fff; }
+    #about .column .info-panel hr {
+      background-color: #83D0F4;
+      border: none;
+      height: .25em;
+      width: 5em;
+      margin: 1em 0; }
+#about .business-panel {
+  padding-top: 15em; }
+  #about .business-panel h3 {
+    color: #3A3A9D; }
+  #about .business-panel .column {
+    padding: 1em;
+    margin: 0; }
+
+#contact {
+  background-color: #3A3A9D;
+  color: #fff; }
+  #contact hr {
+    background-color: #83D0F4;
+    border: none;
+    height: .25em;
+    width: 10em;
+    margin: 1em 0; }
+  #contact h3 {
+    color: #83D0F4;
+    text-transform: uppercase; }
 
 @media (min-width: 600px) {
   .container {
     max-width: 1000px;
     padding: 1em 3em;
     margin: 0 auto; }
+    .container.bigger {
+      max-width: 1200px; }
 
   #fp-nav ul li .fp-tooltip {
     color: #000; }
+
+  #home {
+    clip-path: ellipse(94% 53% at 50% 40%); }
 
   .grid {
     display: flex;
@@ -39,6 +185,9 @@ nav {
 
   .bigger {
     flex: 2; }
+
+  .big {
+    flex: 1.5; }
 
   .halves .column {
     flex: 0 0 50%; }
